fix z-index issue and update link text

--- a/source/css/partials/_common.css.sass
+++ b/source/css/partials/_common.css.sass
@@ -22,6 +22,7 @@ nav
   position: fixed
   top: 0
   height: $h-nav
+  z-index: index($elements, nav)
 
   .menu-trigger
     @extend %span2
