--- a/source/css/partials/_variables.css.sass
+++ b/source/css/partials/_variables.css.sass
@@ -36,7 +36,7 @@ $w-xlarge : 1680px
 $h-nav: 50px
 
 // ----- z-index manage ----- //
-$elements: footer, header,
+$elements: nav, footer, header,
 
 
 
